# occupancy

./: .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conda_build_config.yaml  meta.yaml  pyproject.toml  setup.bat  setup.ps1  setup.py  validate.py
.github/workflows/: ci.yml  release.yml
configs/: default_scenario.json
infrastructure/container/: Dockerfile  docker-compose.yml  occupancy.def
infrastructure/env/: occupancy_env.yml
src/occupancy/: __init__.py  __main__.py  _defaults.py  cli.py
src/occupancy/config/: __init__.py  config.py
src/occupancy/config/data/: default_scenario.json  electricity_weightage.json  occupancy_probabilities.json
src/occupancy/electricity/: __init__.py  electricity_consumption.py
src/occupancy/internal_gains/: __init__.py  occupancy_profile.py
src/occupancy/visualization/: __init__.py  plots.py
tests/: test_config.py  test_profiles.py
